--- a/jinryo.css
+++ b/jinryo.css
@@ -16,3 +16,9 @@ padding-right:25px;
 padding-top:10px;
 
 }
+.botm2{
+background-color: rgba(0, 0, 0, 0.404);
+padding-left:15px;
+padding-right:15px;
+padding-top:10px;
+}
