--- a/main.css
+++ b/main.css
@@ -32,8 +32,8 @@ margin-top:40px;
 }
 
 #parallelogram {
-    width: 790px;
-    height: 650px;
+    width: 690px;
+    height: 610px;
     transform: skew(-15deg);
     background: #0f4c81;
 
@@ -43,21 +43,21 @@ margin-top:40px;
 
   #parallelogram2 {
     width: 300px;
-    height: 550px;
+    height: 610px;
     background: #0f4c81;
     position: absolute;
     z-index:100;
   }
 
-#parallelogram-shadow{
-    width: 795px;
-    height: 660px;
+  #parallelogram-shadow {
+    width: 700px;
+    height: 615px;
     transform: skew(-15deg);
     background: #0000003f;
     opacity: 0.5;
 
     position: absolute;
-    z-index:90;
+    z-index:100;
 }
 
 
@@ -65,14 +65,14 @@ margin-top:40px;
     font-size: 110px;
     padding:0.6rem;
     font-family: 'East Sea Dokdo', cursive;
-    color: #ffd700 !important;
+    color: #BF9000 !important;
     margin-top :30px; 
     margin-left:180px;
 }  
 
 
   .parafnt{
-      color: #EECB27 !important;
+      color: #BF9000 !important;
       margin:30px;
       font-size:30px;
   }
