--- a/nav.css
+++ b/nav.css
@@ -18,7 +18,7 @@ html{
     padding:0.6rem;
     margin-left:100px;
     font-family: 'East Sea Dokdo', cursive;
-    color: #EECB27 !important;
+    color: #BF9000 !important;
    
 }
 
